# ontology_project

./: .gitignore  Convergence_Module_Architecture_v1.md  Taskfile.yaml  requirements.txt
api/: index.py
base44/: index.html  vite.config.js
base44/entities/: Project.jsonc
base44/src/: App.jsx  index.css
base44/src/api/: convergenceClient.js
base44/src/components/layout/: AppLayout.jsx
base44/src/components/workspace/: BottomTabs.jsx  ERDPanel.jsx  GraphPanel.jsx  StatusBar.jsx  TopBar.jsx
base44/src/lib/: AuthContext.jsx  ProjectContext.jsx  mockData.js
base44/src/pages/: Dashboard.jsx  DataSource.jsx  DomainDetection.jsx  ExportView.jsx  SemanticIR.jsx  SettingsPage.jsx  TableClassification.jsx  TraceMap.jsx  Workspace.jsx
convergence/: .gitignore  main.py  pyproject.toml  run_server.py
convergence/frontend/: index.html
convergence/src/convergence/adapters/: base.py  ddl_adapter.py  sqlalchemy_adapter.py
convergence/src/convergence/core/: schema_ir.py  semantic_ir.py
convergence/src/convergence/domain/: detector.py
convergence/src/convergence/pipeline/: classifier.py  converter.py
convergence/src/convergence/slm/: client.py
convergence/src/convergence/web/: app.py
convergence/tests/: test_e2e_banking.py  test_sqlalchemy_adapter.py
convergence/tests/fixtures/: banking_sample.sql
