[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "convergence"
version = "0.1.0"
description = "Converts RDB ERD schemas to graph DB relationship diagrams with semantic enrichment"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "sqlglot>=24.0.0",
    "rdflib>=7.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "psycopg>=3.3.3",
    "pymysql>=1.1.2",
    "oracledb>=3.4.2",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
